--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
 .userinput {
   height: 25px;
+  width: 100%;
   border-radius: 8px;
   border-color: rgb(33, 73, 23);
   font-size: 17px;
@@ -23,8 +24,10 @@
 .dltbtn {
   background-color:rgb(33, 73, 23);
   padding: 8px;
+  width: 150px;
   color: white;
   border-radius: 8px;
+  margin-top: 5px;
   cursor: pointer;
-  border-color: black;
+  border:2px solid black;
 }
